Output - Data from child to father

--- a/src/app/domains/products/components/product/product.component.html
+++ b/src/app/domains/products/components/product/product.component.html
@@ -2,4 +2,5 @@
   <img [src]="img" alt="Product Image" />
   <p>{{ title }}</p>
   <p>Price: {{ price }}</p>
+  <button (click)="addToCartHandler()" class="bg-slate-100 border-spacing-2">Add to Cart</button>
 </div>
