--- a/src/app/domains/products/pages/list/list.component.html
+++ b/src/app/domains/products/pages/list/list.component.html
@@ -1,11 +1,11 @@
 <div class="grid grid-cols-4 gap-4">
-  <app-product title="Product 1" [price]="29.99" img="https://picsum.photos/640/640?r=1"></app-product>
-  <app-product title="Product 2" [price]="39.99" img="https://picsum.photos/640/640?r=2"></app-product>
-  <app-product title="Product 3" [price]="49.99" img="https://picsum.photos/640/640?r=3"></app-product>
-  <app-product title="Product 4" [price]="59.99" img="https://picsum.photos/640/640?r=4"></app-product>
-  <app-product title="Product 5" [price]="69.99" img="https://picsum.photos/640/640?r=5"></app-product>
-  <app-product title="Product 6" [price]="79.99" img="https://picsum.photos/640/640?r=6"></app-product>
-  <app-product title="Product 7" [price]="89.99" img="https://picsum.photos/640/640?r=7"></app-product>
-  <app-product title="Product 8" [price]="99.99" img="https://picsum.photos/640/640?r=8"></app-product>
-  <app-product title="Product 9" [price]="109.99" img="https://picsum.photos/640/640?r=9"></app-product>
+  <app-product title="Product 1" [price]="29.99" img="https://picsum.photos/640/640?r=1" (addToCart)="fromChild($event)" />
+  <app-product title="Product 2" [price]="39.99" img="https://picsum.photos/640/640?r=2" (addToCart)="fromChild($event)" />
+  <app-product title="Product 3" [price]="49.99" img="https://picsum.photos/640/640?r=3" (addToCart)="fromChild($event)" />
+  <app-product title="Product 4" [price]="59.99" img="https://picsum.photos/640/640?r=4" (addToCart)="fromChild($event)" />
+  <app-product title="Product 5" [price]="69.99" img="https://picsum.photos/640/640?r=5" (addToCart)="fromChild($event)" />
+  <app-product title="Product 6" [price]="79.99" img="https://picsum.photos/640/640?r=6" (addToCart)="fromChild($event)" />
+  <app-product title="Product 7" [price]="89.99" img="https://picsum.photos/640/640?r=7" (addToCart)="fromChild($event)" />
+  <app-product title="Product 8" [price]="99.99" img="https://picsum.photos/640/640?r=8" (addToCart)="fromChild($event)" />
+  <app-product title="Product 9" [price]="109.99" img="https://picsum.photos/640/640?r=9" (addToCart)="fromChild($event)" />
 </div>
