--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -5,5 +5,5 @@
   <input type="text" [value]="message()" (input)="changeMessage($event)" />
 </div>
 <div>
-  <app-counter [duration]="duration()" [message]="message()" />
+  <app-counter [duration]="duration()" [message]="message()" *ngIf="duration() > 0" />
 </div>
