--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -1,7 +1,5 @@
 <nav>
-  <div
-    class="flex flex-wrap items-center justify-between mx-auto py-4"
-  >
+  <div class="flex flex-wrap items-center justify-between mx-auto py-4">
     <div class="flex items-center space-x-8">
       <a href="/" class="flex items-center">
         <img
@@ -31,7 +29,10 @@
       </ul>
     </div>
     <div class="flex items-center">
-      <button class="px-4">
+      <button class="p-2 border rounded relative" (click)="toggleSideMenu()">
+        <div class="absolute -top-4 -left-4 mt-1 mr-1 text-xs font-bold text-white bg-red-500 rounded-full px-2 py-1">
+          {{ cart.length }}
+        </div>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -50,3 +51,34 @@
     </div>
   </div>
 </nav>
+
+<div
+  class="fixed border-l-4 top-0 right-0 bg-red z-40 w-72 h-screen p-4 overflow-y-auto transition-transform bg-white"
+  [class.translate-x-full]="hideSideMenu()"
+>
+  <div class="flex justify-between items-center">
+    <p class="text-xl">My Cart</p>
+    <button (click)="toggleSideMenu()">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="w-6 h-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M6 18L18 6M6 6l12 12"
+        />
+      </svg>
+    </button>
+  </div>
+  <div>
+    <div *ngFor="let item of cart">
+      <p>{{ item.title }}</p>
+      <p>{{ item.price }}</p>
+    </div>
+  </div>
+</div>
