Services and get data with http

--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -33,7 +33,7 @@
         <div
           class="absolute -top-4 -left-4 mt-1 mr-1 text-xs font-bold text-white bg-red-500 rounded-full px-2 py-1"
         >
-          {{ cart.length }}
+          {{ cart().length }}
         </div>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -80,11 +80,11 @@
   <div class="pt-4 flex flex-col">
     <div
       class="flex justify-between items-center space-y-2"
-      *ngFor="let item of cart"
+      *ngFor="let item of cart()"
     >
       <div class="flex space-x-2 items-center">
         <img
-          [src]="item.image"
+          [src]="item.images[0]"
           alt="{{ item.title }}"
           class="w-6 h-6 object-cover rounded"
         />
