--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,24 +1,21 @@
-<div class="container mx-auto">
-  <app-header />
-  <div class="px-10">
-    <h1 class="text-lg font-bold">About</h1>
-    <p class="text-xs">
-      Lorem ipsum dolor,
-      <span highlight>sit amet consectetur adipisicing elit.</span> Ullam
-      accusamus commodi soluta, possimus doloribus exercitationem libero vel
-      ipsam laudantium quas totam corporis porro adipisci natus quo incidunt
-      laborum perferendis. Deleniti.
-    </p>
-    <p class="text-xs">
-      Numero de clientes
-      <app-counter
-        [duration]="duration()"
-        [message]="message()"
-        *ngIf="duration() > 0"
-      />
-    </p>
-    <div>
-      <app-wave-audio audioUrl="assets/audio.mp3" />
-    </div>
+<div class="px-10">
+  <h1 class="text-lg font-bold">About</h1>
+  <p class="text-xs">
+    Lorem ipsum dolor,
+    <span highlight>sit amet consectetur adipisicing elit.</span> Ullam
+    accusamus commodi soluta, possimus doloribus exercitationem libero vel ipsam
+    laudantium quas totam corporis porro adipisci natus quo incidunt laborum
+    perferendis. Deleniti.
+  </p>
+  <p class="text-xs">
+    Numero de clientes
+    <app-counter
+      [duration]="duration()"
+      [message]="message()"
+      *ngIf="duration() > 0"
+    />
+  </p>
+  <div>
+    <app-wave-audio audioUrl="assets/audio.mp3" />
   </div>
 </div>
