--- a/src/app/domains/products/components/product/product.component.html
+++ b/src/app/domains/products/components/product/product.component.html
@@ -1,5 +1,8 @@
 <div class="group rounded-lg border">
-  <a [routerLink]="['/product', product.id]" class="w-full overflow-hidden rounded-t-lg bg-gray-200">
+  <a
+    [routerLink]="['/product', product.id]"
+    class="w-full overflow-hidden rounded-t-lg bg-gray-200"
+  >
     <img
       [src]="product.images[0]"
       [alt]="product.title"
@@ -7,9 +10,8 @@
     />
   </a>
   <div class="flex flex-col space-y-2 p-4">
-    <h3>{{ "LUISITO" | reverse }}</h3>
     <h3 class="text-sm text-gray-700">
-      {{ product.title | uppercase | reverse }}
+      {{ product.title | uppercase }}
     </h3>
     <p class="text-lg font-medium text-gray-900">
       {{ product.price | currency : "$" : "symbol" : "1.0" }}
